fix some names
